--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<head>
+  <script src="https://aframe.io/releases/0.3.0/aframe.min.js"></script>
+</head>
+
+<body>
 <a-scene>
   <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
   <a-box position="-1 0.5 -3" rotation="0 45 0" width="1" height="1" depth="1" color="#4CC3D9"></a-box>
@@ -5,3 +10,4 @@
   <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
   <a-sky color="#ECECEC"></a-sky>
 </a-scene>
+</body>
