--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-  <script src="https://aframe.io/releases/0.3.0/aframe.min.js"></script>
+  <script src="aframe.min.js"></script>
 </head>
 
 <body>
