--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <body>
 <a-scene>
   <a-assets>
-    <a-asset-item id="crate-obj" src="crate.obj"></a-asset-item>
-    <a-asset-item id="crate-mtl" src="crate.mtl"></a-asset-item>
+    <a-asset-item id="desk-obj" src="ModernDeskOBJ.obj"></a-asset-item>
+    <a-asset-item id="desk-mtl" src="ModernDeskOBJ.mtl"></a-asset-item>
   </a-assets>
-  <a-obj-model src="#crate-obj" mtl="#crate-mtl"></a-obj-model>
-  <a-obj-model src="crate.obj" mtl="crate.mtl"></a-obj-model>
+  <a-obj-model src="#desk-obj" mtl="#desk-mtl"></a-obj-model>
+  <a-obj-model src="desk.obj" mtl="desk.mtl"></a-obj-model>
   <!--
 <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
   <a-box position="-1 0.5 -3" rotation="0 45 0" width="1" height="1" depth="1" color="#4CC3D9"></a-box>
