--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <body>
 <a-scene>
   <a-assets>
-    <a-asset-item id="desk-obj" src="ModernDeskOBJ.obj"></a-asset-item>
-    <a-asset-item id="desk-mtl" src="ModernDeskOBJ.mtl"></a-asset-item>
+    <a-asset-item id="desk-obj" src="/models/ModernDeskOBJ.obj"></a-asset-item>
+    <a-asset-item id="desk-mtl" src="/models/ModernDeskOBJ.mtl"></a-asset-item>
   </a-assets>
   <a-obj-model src="#desk-obj" mtl="#desk-mtl"></a-obj-model>
   <a-obj-model src="desk.obj" mtl="desk.mtl"></a-obj-model>
