--- a/index.html
+++ b/index.html
@@ -1,24 +1,34 @@
 <head>
-  <script src="aframe.min.js"></script>
+  <script src="https://aframe.io/releases/0.3.0/aframe.min.js"></script>
+  <script src="https://cdn.rawgit.com/tizzle/aframe-orbit-controls-component/master/dist/aframe-orbit-controls-component.min.js"></script>
 </head>
 
 <body>
-<a-scene>
+  <a-scene>
 
-  <a-assets>
-    <a-asset-item id="desk-obj" src="models/ModernDeskOBJ.obj"></a-asset-item>
-    <a-asset-item id="desk-mtl" src="models/ModernDeskOBJ.mtl"></a-asset-item>
-  </a-assets>
-  <a-obj-model src="#desk-obj" mtl="#desk-mtl"></a-obj-model>
-<!--
-  <a-obj-model src="desk.obj" mtl="desk.mtl"></a-obj-model>
--->
-<a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-<!--
-  <a-box position="-1 0.5 -3" rotation="0 45 0" width="1" height="1" depth="1" color="#4CC3D9"></a-box>
-  <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-  <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-  <a-sky color="#ECECEC"></a-sky>
--->
-</a-scene>
+      <a-entity
+          id="camera"
+          camera
+          position="0 0 5"
+          orbit-controls="
+              autoRotate: false;
+              target: #target;
+              enableDamping: true;
+              dampingFactor: 0.125;
+              rotateSpeed:0.08;
+              minDistance:3;
+              maxDistance:40;"
+          mouse-cursor="">
+      </a-entity>
+
+
+      <a-entity id="target" geometry="primitive: box" scale="1 1 1" position="0 0 0" material="color: #cc0000"></a-entity>
+      <a-entity geometry="primitive: box" scale="1 1 1" position="8 0 0" material="color: #ffffff"></a-entity>
+      <a-entity geometry="primitive: box" scale="1 1 1" position="-8 0 0" material="color: #ffffff"></a-entity>
+      <a-entity geometry="primitive: box" scale="1 1 1" position="16 0 0" material="color: #ffffff"></a-entity>
+      <a-entity geometry="primitive: box" scale="1 1 1" position="-16 0 0" material="color: #ffffff"></a-entity>
+
+      <a-sky color="#000000"></a-sky>
+
+  </a-scene>
 </body>
