--- a/index.html
+++ b/index.html
@@ -21,12 +21,21 @@
           mouse-cursor="">
       </a-entity>
 
+      <a-assets>
+        <a-asset-item id="crate-obj" src="/models/crate/crate.obj"></a-asset-item>
+        <a-asset-item id="crate-mtl" src="/models/crate/crate.mtl"></a-asset-item>
+      </a-assets>
 
       <a-entity id="target" geometry="primitive: box" scale="1 1 1" position="0 0 0" material="color: #cc0000"></a-entity>
       <a-entity geometry="primitive: box" scale="1 1 1" position="8 0 0" material="color: #ffffff"></a-entity>
       <a-entity geometry="primitive: box" scale="1 1 1" position="-8 0 0" material="color: #ffffff"></a-entity>
       <a-entity geometry="primitive: box" scale="1 1 1" position="16 0 0" material="color: #ffffff"></a-entity>
       <a-entity geometry="primitive: box" scale="1 1 1" position="-16 0 0" material="color: #ffffff"></a-entity>
+
+      <a-entity obj-model="obj: #crate-obj; mtl: #crate-mtl" position="5 0 5"></a-entity>
+      <a-entity obj-model="obj: #crate-obj; mtl: #crate-mtl" position="5 2 5"></a-entity>
+
+
 
       <a-sky color="#000000"></a-sky>
 
