--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
   <a-scene>
       <a-assets>
-        <a-asset-item id="crate-obj" src="/models/crate/crate.obj"></a-asset-item>
-        <a-asset-item id="crate-mtl" src="/models/crate/crate.mtl"></a-asset-item>
+        <a-asset-item id="crate-obj" src="crate.obj"></a-asset-item>
+        <a-asset-item id="crate-mtl" src="crate.mtl"></a-asset-item>
       </a-assets>
       <a-entity
           id="camera"
