--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
               dampingFactor: 0.125;
               rotateSpeed:0.08;
               minDistance:3;
-              maxDistance:40;"
+              maxDistance:40;
+              autoRotate: true"
           mouse-cursor="">
       </a-entity>
 
