--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               rotateSpeed:0.08;
               minDistance:3;
               maxDistance:40;
-              autoRotate: true"
+              enabled: true"
           mouse-cursor="">
       </a-entity>
 
