--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
               dampingFactor: 0.125;
               rotateSpeed:0.08;
               minDistance:3;
-              maxDistance:40;
-              enabled: true"
+              maxDistance:40;"
           mouse-cursor="">
       </a-entity>
 
