--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           camera
           position="0 0 5"
           orbit-controls="
+              enabled: true;
               autoRotate: false;
               target: #target;
               enableDamping: true;
