--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
           position="0 0 5"
           orbit-controls="
               enabled: true;
-              autoRotate: false;
+              autoRotate: true;
+              autoRotateSpeed: 1;
               target: #target;
               enableDamping: true;
               dampingFactor: 0.125;
