--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <a-entity
           id="camera"
           camera
+          look-controls
           position="0 0 5"
           orbit-controls="
               enabled: true;
@@ -25,6 +26,8 @@
               maxDistance:40;"
           mouse-cursor="">
       </a-entity>
+
+
 
       <!--<a-entity id="target" geometry="primitive: box" scale="1 1 1" position="0 0 0" material="color: #cc0000"></a-entity>
       <a-entity obj-model="obj: #crate-obj; mtl: #crate-mtl" position="5 0 5"></a-entity>-->
