--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
   <script src="aframe.min.js"></script>
-  <script src="aframe-orbit-controls-component.min.js"></script>
+  <script src="aframe-orbit-controls-component.js"></script>
 </head>
 
 <body>
