--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           position="0 0 5"
           orbit-controls="
               enabled: true;
-              autoRotate: true;
+              autoRotate: false;
               autoRotateSpeed: 1;
               target: #target;
               enableDamping: true;
