--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <a-asset-item id="crate-obj" src="crate.obj"></a-asset-item>
         <a-asset-item id="crate-mtl" src="crate.mtl"></a-asset-item>
       </a-assets>
-      <a-entity
+      <!--<a-entity
           id="camera"
           camera
           position="0 0 5"
@@ -24,7 +24,9 @@
               minDistance:3;
               maxDistance:40;"
           mouse-cursor="">
-      </a-entity>
+      </a-entity>-->
+
+      <a-entity camera="userHeight: 1.6" look-controls></a-entity>
 
 
 
