--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           mouse-cursor="">
       </a-entity>-->
 
-      <a-entity camera="userHeight: 1.6" look-controls></a-entity>
+      <a-entity camera="userHeight: 1.6" position="0 0 5" look-controls></a-entity>
 
 
 
