--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
           mouse-cursor="">
       </a-entity>-->
 
-      <a-entity camera="userHeight: 1.6" position="0 0 5" look-controls></a-entity>
-
-
+      <a-entity position="0 0 5">
+        <a-entity camera="userHeight: 1.6" look-controls></a-entity>
+      </a-entity>
 
       <!--<a-entity id="target" geometry="primitive: box" scale="1 1 1" position="0 0 0" material="color: #cc0000"></a-entity>
       <a-entity obj-model="obj: #crate-obj; mtl: #crate-mtl" position="5 0 5"></a-entity>-->
