--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </a-entity>-->
 
       <a-entity position="0 0 5">
-        <a-entity camera="userHeight: 1.6" look-controls></a-entity>
+        <a-camera></a-camera>
       </a-entity>
 
       <!--<a-entity id="target" geometry="primitive: box" scale="1 1 1" position="0 0 0" material="color: #cc0000"></a-entity>
