--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
   <script src="aframe.min.js"></script>
   <script src="aframe-orbit-controls-component.js"></script>
+  <script>console.log(THREE);</script>
 </head>
 
 <body>
