--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           position="5 5 5"
           look-controls
           mouse-cursor="">
-          <a-box position="0 0 -2" rotation="0 0 0" width="1" height="1" depth="1" color="#4CC3D9"></a-box>
+          <a-entity id="target1" obj-model="obj: #crate-obj; mtl: #crate-mtl" position="0 0 -3"></a-entity>
       </a-entity>
 
 
